--- a/index.html
+++ b/index.html
@@ -1,8 +1,131 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+	<head>
+	  <title>Home | Caffeinated</title>
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	  
+	  <link rel="stylesheet" href="styles.css">
+	  
 
-<h1> Hi, Dagmara here. This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		   <div class="container-fluid">
+			   <a class="navbar-brand" href="index.html">
+			   <img src="logo.png" height="35" alt="logo">
+			   </a>
+				 <div class="navbar-collapse justify-content-end">
+					<ul class="navbar-nav ">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="menu.html">Menu</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+		   </div>
+		</nav>
+		
+		<div class="home-banner">
+		<img src="banner-logo.jpg" class="img-fluid" alt="Caffeinated Inc.">
+			<div class="caption">
+				<img src="vector.svg" alt="logo">
+				<h1>CAFFEINATED INC.</h1>
+				<h3>COFFEE, LUNCH &amp; MORE</h3>
+			</div>
 
-</body>
-</html> 
+		</div>
+		
+		
+		<div class="values">
+			<div class="container padding">
+				<div class="row">
+					<div class="col align-self-start text-center">
+						<h1 class="display-5 padding-top">Serving the very best coffee since 1998</h1>
+						<p class="lead padding-top">Whether you're looking for a quiet place to work with a warm mug of your favourite coffee, a cosy hideout to enjoy a thrilling novel or your next go-to meeting spot to hang out with friends, you've come to the right place. We've tried to make Caffeinated a place where everyone can find something they like and long for. No matter what coffee or tea you drink, we can surely meet your highest expectations.  </p>
+					</div>
+				</div>
+				
+				<div class="row padding-top">
+					<div class="col-md text-center padding-sides">
+						<img src="beans.png" alt="coffee beans"><br>
+						<p class="lead">Best coffee</p>
+						<p>We carefully select our coffee suppliers to provide your tastebuds with the best possible experience.</p>
+					</div>
+					<div class="col-md text-center padding-sides">
+						<img src="croissant.png" alt="croissant"><br>
+						<p class="lead">Tasty food</p>
+						<p>We make sure that our meals are always fresh and made with top quality ingredients.</p>
+					</div>
+					<div class="col-md text-center padding-sides">
+						<img src="quality-service.png" alt="quality"><br>
+						<p class="lead">Quality service</p>
+						<p>High quality customer service is one of our top priorities. We will always serve you with a smile &#9829;.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="pictures">
+			<div class="container-fluid padding">
+				<div class="row">
+					<div class="col-lg-8">
+						<img src="cafe2.jpg" class="img-fluid" alt="Our cafe">
+					</div>
+					<div class="col-lg-4">
+						<img src="coffee.jpg" class="img-fluid" alt="Delicious coffee">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="opening-hours margin-bottom">
+			<div class="container padding">
+				<div class="row">
+					<div class="col-lg">
+						<h1>VISIT US</h1>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-4 align-self-center">
+						<h5>WEEKDAYS</h5>
+						<p>Mon - Thurs<br>
+						10.00 - 21.30</p>
+						<p>Fri<br>
+						10.00 - 23.00</p>
+						<h5>WEEKENDS</h5>
+						<p>Sat<br>
+						11.00 - 23.00</p>
+						<p>Sun<br>
+						11.00 - 22.00</p>
+					</div>
+					<div class="col-lg-8">
+						<h5>ADDRESS</h5>
+						<p>Kahvikatu 7, 00990 Helsinki</p>
+						<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.5222041261989!2d25.145014616193787!3d60.20518974752979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920f05c00062c3%3A0xb7abd70ca116d4e6!2sKahvikatu%207%2C%2000990%20Helsinki!5e0!3m2!1spl!2sfi!4v1638717305389!5m2!1spl!2sfi" height="360" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+			
+			
+			
+		
+
+	<footer class="text-center text-md-start bg-light text-muted">
+		 <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+			<p>© 2021 Caffeinated Inc. | <small><a target="_blank" href="https://icons8.com/icon/CU7uQBPFjlhJ/coffee-beans">Coffee Beans</a>, <a target="_blank" href="https://icons8.com/icon/PpDJPvgkLyzX/croissant">Croissant</a> and <a target="_blank" href="https://icons8.com/icon/m0MLdyiIdOfm/quality">Quality</a> icons by <a target="_blank" href="https://icons8.com">Icons8</a></small></p>
+		</div>
+	</footer>
+		
+		
+	<script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	</body>
+</html>
